spelling mistakes? really?

--- a/README
+++ b/README
@@ -5,5 +5,5 @@ anything you store will be given both your name and the date you stored it
 feel free to maintain your own copy 
 
 anything you write will be kept for the entire duration of this compendium's existence
-any for the duration of the existence of any other compendia with knowledge of it
+and for the duration of the existence of any other compendia with knowledge of it
 
